Created JS for the Experience page

--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ body {
   border-style: solid;
 }
 
-.accordian {
+.accordion {
   background-color: #eee;
   color: #444;
   cursor: pointer;
@@ -61,7 +61,7 @@ body {
   transition: 0.4s;
 }
 
-.accordian:hover {
+.accordion:hover {
   background-color: #ccc;
 }
 
